--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>A Garden of Forking Paths</title>
+    <link rel="stylesheet" type="text/css" href="Garden.css"/>
     <script type="text/javascript" src="jquery-1.7.js"></script>
     <script type="text/javascript" src="../Traverse.js"></script>
 <!--    <script type="text/javascript" src="Garden.js"></script> -->
