--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -4,6 +4,8 @@
     <title>A Garden of Forking Paths</title>
     <link rel="stylesheet" type="text/css" href="Garden.css"/>
     <script type="text/javascript" src="jquery-1.7.js"></script>
+    <script type="text/javascript" src="underscore.js"></script>
+    <script type="text/javascript" src="backbone.js"></script>
     <script type="text/javascript" src="../Traverse.js"></script>
     <script type="text/javascript" src="Garden.js"></script>
   </head>
