--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>A Garden of Forking Paths</h1>
-    <ul id="choices"></ul>
-    <ul id="pastChoices"></ul>
+    <ul class="choices"></ul>
+    <ul class="pastChoices"></ul>
   </body>
 </html>
