Multiple playthrough setup (no backend support yet), act/scene counter

--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -11,7 +11,28 @@
   </head>
   <body>
     <h1>A Garden of Forking Paths</h1>
-    <ul class="choices"></ul>
-    <ul class="pastChoices"></ul>
+    
+    <div class="playthroughs">
+      <div class="playthrough">
+        <h2>Group 1</h2>
+        <div class="sceneCounter"></div>
+        <ul class="choices"></ul>
+        <ul class="pastChoices"></ul>
+      </div>
+    
+      <div class="playthrough">
+        <h2>Group 2</h2>
+        <div class="sceneCounter"></div>
+        <ul class="choices"></ul>
+        <ul class="pastChoices"></ul>
+      </div>
+
+      <div class="playthrough">
+        <h2>Group 3</h2>
+        <div class="sceneCounter"></div>
+        <ul class="choices"></ul>
+        <ul class="pastChoices"></ul>
+      </div>
+    </div>
   </body>
 </html>
