--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="underscore.js"></script>
     <script type="text/javascript" src="backbone.js"></script>
     <script type="text/javascript" src="../Traverse.js"></script>
+    <script type="text/javascript" src="../Runtime/TraverseRuntime.js"></script>
     <script type="text/javascript" src="Garden.js"></script>
   </head>
   <body>
