Move libraries to runtime dir, refactor CSS for runtime

--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>A Garden of Forking Paths</title>
+    <link rel="stylesheet" type="text/css" href="../Runtime/TraverseRuntime.css"/>
     <link rel="stylesheet" type="text/css" href="Garden.css"/>
-    <script type="text/javascript" src="jquery-1.7.js"></script>
-    <script type="text/javascript" src="underscore.js"></script>
-    <script type="text/javascript" src="backbone.js"></script>
     <script type="text/javascript" src="../Traverse.js"></script>
+    <script type="text/javascript" src="../Runtime/jquery-1.7.js"></script>
+    <script type="text/javascript" src="../Runtime/underscore.js"></script>
+    <script type="text/javascript" src="../Runtime/backbone.js"></script>
     <script type="text/javascript" src="../Runtime/TraverseRuntime.js"></script>
     <script type="text/javascript" src="Garden.js"></script>
   </head>
