Choice letters display.  As an added bonus, get rid of the awful subclass of Playthrough

--- a/Garden/Garden.html
+++ b/Garden/Garden.html
@@ -18,6 +18,7 @@
       <div class="playthrough">
         <h2>Group 1</h2>
         <div class="sceneCounter"></div>
+        <div class="choiceLetters"></div>
         <ul class="choices"></ul>
         <ul class="pastChoices"></ul>
       </div>
@@ -25,6 +26,7 @@
       <div class="playthrough">
         <h2>Group 2</h2>
         <div class="sceneCounter"></div>
+        <div class="choiceLetters"></div>
         <ul class="choices"></ul>
         <ul class="pastChoices"></ul>
       </div>
@@ -32,6 +34,7 @@
       <div class="playthrough">
         <h2>Group 3</h2>
         <div class="sceneCounter"></div>
+        <div class="choiceLetters"></div>
         <ul class="choices"></ul>
         <ul class="pastChoices"></ul>
       </div>
